[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/RJ.gd" type="Script" id=1]
[ext_resource path="res://asset/RJ/background2.png" type="Texture" id=2]
[ext_resource path="res://asset/RJ/rj_animation.tres" type="SpriteFrames" id=3]
[ext_resource path="res://asset/RJ/j_animation.tres" type="SpriteFrames" id=4]
[ext_resource path="res://gui_dialog.tscn" type="PackedScene" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -54.0
margin_right = 579.0
margin_bottom = 262.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 230, 124 )
texture = ExtResource( 2 )

[node name="rj" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "guard"

[node name="j" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "stand_talk"
flip_h = true

[node name="init_pos_rj" type="Position2D" parent="."]
position = Vector2( 115, 226 )

[node name="init_pos_j" type="Position2D" parent="."]
position = Vector2( 347, 195 )

[node name="final_pos_rj" type="Position2D" parent="."]
position = Vector2( 226, 203 )

[node name="final_pos_j" type="Position2D" parent="."]
position = Vector2( 253, 203 )

[node name="cl" parent="." instance=ExtResource( 5 )]

[node name="Tween_Mov" type="Tween" parent="."]

[node name="Tween_updown" type="Tween" parent="."]

[node name="Tween_outro" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween_Mov" to="." method="_on_Tween_Mov_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween_updown" to="." method="_on_Tween_updown_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween_outro" to="." method="_on_Tween_outro_tween_all_completed"]
